--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
 prompt_toolkit>=3.0.0
-requests>=2.25.0 
+requests>=2.25.0
+chromadb>=0.4.0
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-ollama>=0.1.0
+sentence-transformers>=2.2.0
+python-multipart>=0.0.6
+unstructured>=0.10.0
+markdown>=3.0.0
+pdfminer.six>=20221105 
