Update requirements.txt: add new dependencies for document processing and data manipulation, including docx2txt, pandas, openpyxl, xlrd, and msoffcrypto-tool, to enhance functionality and support additional file formats.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,9 @@ sentence-transformers>=2.2.0
 python-multipart>=0.0.6
 unstructured>=0.10.0
 markdown>=3.0.0
-pdfminer.six>=20221105 
+pdfminer.six>=20221105
+docx2txt>=0.8
+pandas>=2.0
+openpyxl>=3.1
+xlrd>=2.0
+msoffcrypto-tool>=5.4.1 
