--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chromadb>=0.4.0
 langchain>=0.1.0
 langchain-community>=0.0.10
 langchain-ollama>=0.1.0
+langchain-experimental>=0.3.4
 sentence-transformers>=2.2.0
 python-multipart>=0.0.6
 unstructured>=0.10.0
